# maltego-mcp

./: .gitignore  .mcp.json  LICENSE  README.md  TOOLS.md  evaluation.xml  pyproject.toml  tools.json
.claude-plugin/: marketplace.json  plugin.json
commands/: investigate.md
scripts/: gen_tools_doc.py
src/maltego_mcp/: __init__.py  analysis.py  csv_import.py  detect.py  entities.py  events.py  formatting.py  guidance.py  layout.py  learning.py  machines.py  memory.py  models.py  orchestration.py  recommendation.py  reporting.py  scoring.py  server.py
src/maltego_mcp/graph/: __init__.py  graph_store.py  mtgx_reader.py  mtgx_writer.py
src/maltego_mcp/transforms/: __init__.py  base.py  local.py
src/maltego_mcp/transforms/osint/: __init__.py  base_http.py  censys.py  hibp.py  hunterio.py  keyless.py  securitytrails.py  shodan.py  virustotal.py
tests/: test_enhancements.py  test_guidance.py  test_intelligence.py  test_learning.py  test_providers_live.py  test_smoke.py  test_tools.py  test_v04.py
